# BitonicSort

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
bs_lib/: CMakeLists.txt
bs_lib/inc/: bs.hpp
inc/: bs.hpp
src/: bitonicSort_cpu.cpp  bitonicSort_gkernel.cl  bitonicSort_lkernel.cl  main.cpp
tests/tester/: tester_config.cmake
tests/unit/: test1.cpp
